Progress towards linters

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,15 @@
+[check-manifest]
+ignore =
+          .coveragerc
+          LICENSE
+          Makefile
+          codecov.yaml
+          dev-requirements.txt
+          indirect-requirements.txt
+          lint.mk
+          packaging-requirements.txt
+          requirements.txt
+
 [versioneer]
 VCS = git
 style = pep440
@@ -5,3 +17,76 @@ versionfile_source = src/sphinx_substitution_extensions/_version.py
 versionfile_build = sphinx_substitution_extensions/_version.py
 tag_prefix =
 parentdir_prefix = substitution-extension-
+
+[flake8]
+ignore=L205,L101,L211,L303,L302,W503
+exclude=./src/*/_vendor/,
+        ./src/*/_version.py,
+        ./versioneer.py,
+
+[tool:pytest]
+log_cli=true
+log_cli_level=INFO
+
+[coverage:run]
+branch = True
+omit =
+    *_vendor*
+    src/*/_version.py
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+
+[yapf]
+DEDENT_CLOSING_BRACKETS = true
+
+[mypy]
+check_untyped_defs = True
+disallow_incomplete_defs = True
+disallow_subclassing_any = True
+disallow_untyped_calls = True
+disallow_untyped_decorators = False
+disallow_untyped_defs = True
+follow_imports = 'normal'
+ignore_missing_imports = True
+no_implicit_optional = True
+strict_optional = True
+warn_no_return = True
+warn_redundant_casts = True
+warn_return_any = True
+warn_unused_configs = True
+warn_unused_ignores = True
+
+[mypy-versioneer,*/_vendor/*,*/_version]
+ignore_errors = True
+
+[isort]
+multi_line_output=3
+include_trailing_comma=true
+not_skip=__init__.py
+skip=_vendor,
+     versioneer.py,
+     setup.py,
+
+[pydocstyle]
+# No summary lines
+#   - D200
+#   - D205
+#   - D400
+# We don't want blank lines before class docstrings
+#   - D203
+# We don't need docstrings to start at the first line
+#   - D212
+# Allow blank lines after function docstrings
+#   - D202
+# Section names do not need to end in newlines
+#   - D406
+# Section names do not need dashed underlines
+#   - D407
+# Click uses \b to stop wrapping, so we must allow backslashes in docstrings
+#   - D301
+# No blank line is needed after the last section
+# We do not care about the imperative mood.
+#   - D401
+ignore = D200,D202,D203,D205,D212,D400,D406,D407,D413,D301,D401
