--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,9 @@ ignore =
           lint.mk
           packaging-requirements.txt
           requirements.txt
+          admin
+          admin/*
+          pylintrc
 
 [versioneer]
 VCS = git
@@ -90,3 +93,7 @@ skip=_vendor,
 # We do not care about the imperative mood.
 #   - D401
 ignore = D200,D202,D203,D205,D212,D400,D406,D407,D413,D301,D401
+
+[doc8]
+max-line-length = 2000
+ignore-path = ./node_modules,./src/*.egg-info/,./docs/*/build/spelling/output.txt,src/*/_vendor
