Progress towards adding code

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [check-manifest]
 ignore =
           .coveragerc
+          spelling_private_dict.txt
           LICENSE
           Makefile
           codecov.yaml
