--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
 - travis_retry pip install --upgrade --editable .[dev]
 cache: pip
 script:
+- make lint
 - pytest -s -vvv --cov=src/ --cov=tests tests/
 after_success:
 - codecov
