Add workaround for new YAPF change

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,7 @@ exclude_lines =
 
 [yapf]
 DEDENT_CLOSING_BRACKETS = true
+BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true
 
 [mypy]
 check_untyped_defs = True
