--- a/setup.cfg
+++ b/setup.cfg
@@ -85,6 +85,7 @@ skip=_vendor,
 #   - D200
 #   - D205
 #   - D400
+#   - D415
 # We don't want blank lines before class docstrings
 #   - D203
 # We don't need docstrings to start at the first line
@@ -92,15 +93,12 @@ skip=_vendor,
 # Allow blank lines after function docstrings
 #   - D202
 # Section names do not need to end in newlines
-#   - D406
+#	- D406
 # Section names do not need dashed underlines
-#   - D407
-# Click uses \b to stop wrapping, so we must allow backslashes in docstrings
-#   - D301
+# 	- D407
 # No blank line is needed after the last section
-# We do not care about the imperative mood.
-#   - D401
-ignore = D200,D202,D203,D205,D212,D400,D406,D407,D413,D301,D401
+ignore = D200,D202,D203,D205,D212,D400,D406,D407,D413,D415
+match=(?!.*(versioneer|test_|_version)).*\.py
 
 [doc8]
 max-line-length = 2000
