--- a/setup.cfg
+++ b/setup.cfg
@@ -103,3 +103,27 @@ match=(?!.*(versioneer|test_|_version)).*\.py
 [doc8]
 max-line-length = 2000
 ignore-path = ./node_modules,./src/*.egg-info/,./docs/*/build/spelling/output.txt,src/*/_vendor
+
+[metadata]
+name = Sphinx Substitution Extensions
+description = Extensions for Sphinx which allow for substitutions.
+long_description = file: README.rst
+keywords = sphinx, rst, documentation
+license = Apache License, Version 2.0
+classifiers =
+    Operating System :: POSIX
+    Environment :: Web Environment
+    Programming Language :: Python :: 3.8
+    License :: OSI Approved :: Apache Software License
+    Development Status :: 5 - Production/Stable
+url = https://github.com/adamtheturtle/sphinx-substitution-extensions
+author = Adam Dangoor
+author_email = adamdangoor@gmail.com
+
+[options]
+zip_safe = False
+include_package_data = True
+# Avoid dependency links because they are not supported by Read The Docs.
+#
+# Also, they require users to use ``--process-dependency-links``.
+dependency_links =
