Move more to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -127,3 +127,9 @@ include_package_data = True
 #
 # Also, they require users to use ``--process-dependency-links``.
 dependency_links =
+package_dir=
+    =src
+packages=find:
+
+[options.packages.find]
+where=src
