Fix lint issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ ignore =
 [flake8]
 ignore=L205,L101,L211,L303,L302,W503
 exclude=./src/*/_vendor/,
-        ./eggs,
+        ./.eggs,
 
 [tool:pytest]
 log_cli=true
