--- a/setup.cfg
+++ b/setup.cfg
@@ -11,14 +11,14 @@ ignore =
           packaging-requirements.txt
           requirements.txt
           admin
-          admin/*
+          admin/**
           pylintrc
           tests
-          tests/*
+          tests/**
           *.rst
           .git_archival.txt
           sample
-          sample/*
+          sample/**
 
 [flake8]
 ignore=L205,L101,L211,L303,L302,W503
