--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,14 +15,30 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python 3.8
+      - name: "Set up Python 3.8"
         uses: actions/setup-python@v1
         with:
           python-version: 3.8
-      - name: Install dependencies
+
+      - name: "Install dependencies"
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade --editable .[dev]
-      - name: Lint
+          sudo apt-get install -y enchant
+
+      - name: "Lint"
         run: |
           make lint
+
+      - name: "Build sample"
+        run: |
+          make build-sample
+
+      - name: "Run tests"
+        run: |
+          pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests tests/
+
+      - name: "Upload coverage to Codecov"
+        uses: "codecov/codecov-action@v1"
+        with:
+          fail_ci_if_error: true
