--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
       - name: "Install dependencies"
         run: |
           python -m pip install --upgrade pip
+          python -m pip install --upgrade codecov
           python -m pip install --upgrade --editable .[dev]
           sudo apt-get install -y enchant
 
