Move setup requirements to a requirements file

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,9 +6,8 @@ ignore =
           Makefile
           codecov.yaml
           dev-requirements.txt
-          indirect-requirements.txt
+          *-requirements.txt
           lint.mk
-          packaging-requirements.txt
           requirements.txt
           admin
           admin/**
