--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,18 +13,24 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        python-version: [3.8]
+        sphinx-version: ['==2.0', '==2.1', '==2.2', '==2.3', '==2.4', '']
+
     steps:
       - uses: actions/checkout@v2
-      - name: "Set up Python 3.8"
+      - name: "Set up Python"
         uses: actions/setup-python@v1
         with:
-          python-version: 3.8
+          python-version: ${{ matrix.python-version }}
 
       - name: "Install dependencies"
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade codecov
           python -m pip install --upgrade --editable .[dev]
+          python -m pip install Sphinx{{$ matrix.sphinx-version }}
           sudo apt-get install -y enchant
 
       - name: "Lint"
