--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-docutils==0.16
-sphinx-prompt==1.2.0
-sphinx==3.0.4
+# The lowest versions of these are matched in the ``ci-versions.yml`` workflow.
+docutils>=0.15
+sphinx-prompt>=0.1
+sphinx>=2.0.0
