Add doc8 linting to CI

--- a/setup.cfg
+++ b/setup.cfg
@@ -87,7 +87,7 @@ ignore = D200,D202,D203,D205,D212,D400,D406,D407,D413,D415
 
 [doc8]
 max-line-length = 2000
-ignore-path = ./node_modules,./src/*.egg-info/,./docs/*/build/spelling/output.txt,src/*/_vendor,.eggs/
+ignore-path = ./node_modules,./src/*.egg-info/,./docs/*/build/spelling/output.txt,src/*/_vendor,.eggs/,src/*/_setuptools_scm_version.txt
 
 [metadata]
 name = Sphinx Substitution Extensions
