Use toml for pylint settings

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 include versioneer.py
 include src/sphinx_substitution_extensions/_version.py
 include src/sphinx_substitution_extensions/py.typed
+include pyproject.toml
