Fail CI if uploading to codecov fails

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
----
+git ---
 
 name: CI
 
@@ -45,5 +45,3 @@ jobs:
 
       - name: "Upload coverage to Codecov"
         uses: "codecov/codecov-action@v1"
-        with:
-          fail_ci_if_error: true
