--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade codecov
-          python -m pip install --upgrade --editable .[dev]
+          # We use '--ignore-installed' to avoid GitHub's cache which can cause
+          # issues - we have seen packages from this cache be cause trouble with
+          # pip-extra-reqs.
+          python -m pip install --ignore-installed --upgrade --editable .[dev]
           sudo apt-get install -y enchant
 
       - name: "Lint"
