--- a/.github/workflows/ci-versions.yml
+++ b/.github/workflows/ci-versions.yml
@@ -32,7 +32,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade codecov
-          python -m pip install --upgrade --editable .[dev]
+          # We use '--ignore-installed' to avoid GitHub's cache which can cause
+          # issues - we have seen packages from this cache be cause trouble with
+          # pip-extra-reqs.
+          python -m pip install --ignore-installed --upgrade --editable .[dev]
           # Oldest versions from requirements.
           pip install Sphinx==2.0.0
           pip install sphinx-prompt==0.1
