Set the long description content type

--- a/setup.cfg
+++ b/setup.cfg
@@ -93,6 +93,7 @@ ignore-path = ./node_modules,./src/*.egg-info/,./docs/*/build/spelling/output.tx
 name = Sphinx Substitution Extensions
 description = Extensions for Sphinx which allow for substitutions.
 long_description = file: README.rst
+long_description_content_type = text/x-rst
 keywords = sphinx, rst, documentation
 license = Apache License, Version 2.0
 classifiers =
