--- a/setup.cfg
+++ b/setup.cfg
@@ -62,8 +62,8 @@ warn_unused_ignores = True
 [isort]
 multi_line_output=3
 include_trailing_comma=true
-not_skip=__init__.py
 skip=_vendor,
+     .eggs,
      setup.py,
 
 [pydocstyle]
