--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ check_untyped_defs = True
 disallow_incomplete_defs = True
 disallow_subclassing_any = True
 disallow_untyped_calls = True
-disallow_untyped_decorators = False
+disallow_untyped_decorators = True
 disallow_untyped_defs = True
 follow_imports = 'normal'
 ignore_missing_imports = True
