Move some tool configuration from setup.cfg to pyproject.toml

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,7 @@
-include versioneer.py
-include src/sphinx_substitution_extensions/_version.py
 include src/sphinx_substitution_extensions/py.typed
 include pyproject.toml
+include dev-requirements.txt
+include indirect-requirements.txt
+include packaging-requirements.txt
+include requirements.txt
+include setup-requirements.txt
