--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,7 @@ classifiers =
     Operating System :: POSIX
     Environment :: Web Environment
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
     License :: OSI Approved :: Apache Software License
     Development Status :: 5 - Production/Stable
 url = https://github.com/adamtheturtle/sphinx-substitution-extensions
