--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,8 @@
         'duplicate-code',
         # Let isort handle imports
         'wrong-import-order',
+        # pylint does not support new type hint styles e.g. list[str]
+        'unsubscriptable-object',
     ]
 
     [tool.pylint.'FORMAT']
