--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ disallow_subclassing_any = True
 disallow_untyped_calls = True
 disallow_untyped_decorators = True
 disallow_untyped_defs = True
-follow_imports = 'normal'
+follow_imports = normal
 ignore_missing_imports = True
 no_implicit_optional = True
 strict_equality = True
