--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,8 +95,9 @@ skip-string-normalization = true
 
 [tool.isort]
 
-  multi_line_output = 3
- include_trailing_comma = true
+multi_line_output = 3
+include_trailing_comma = true
+ensure_newline_before_comments = true
 
 [tool.coverage.run]
 
