--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,3 @@
 include src/sphinx_substitution_extensions/py.typed
 include pyproject.toml
-include dev-requirements.txt
-include indirect-requirements.txt
-include packaging-requirements.txt
-include requirements.txt
-include setup-requirements.txt
+include requirements/*.txt
