--- a/pyproject.toml
+++ b/pyproject.toml
@@ -183,7 +183,7 @@ warn_no_return = true
 warn_redundant_casts = true
 warn_return_any = true
 warn_unused_configs = true
-warn_unused_ignores = true
+warn_unused_ignores = false
 
 [build-system]
 requires = ["setuptools", "pip", "wheel"]
