--- a/pyproject.toml
+++ b/pyproject.toml
@@ -183,6 +183,7 @@ warn_no_return = true
 warn_redundant_casts = true
 warn_return_any = true
 warn_unused_configs = true
+# See https://github.com/python/typeshed/issues/5755
 warn_unused_ignores = false
 
 [build-system]
