Remove multiple pylint ignores

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,10 @@
 
     # List of plugins (as comma separated values of python modules names) to load,
     # usually to register additional checkers.
-    load-plugins = ['pylint.extensions.docparams']
+    load-plugins = [
+        'pylint.extensions.docparams',
+        'pylint.extensions.no_self_use',
+    ]
 
     # Allow loading of arbitrary C extensions. Extensions are imported into the
     # active Python interpreter and may run arbitrary code.
@@ -38,8 +41,6 @@
     # --disable=W"
 
     disable = [
-        # Tests need `self` to be in a class but do not use it.
-        'no-self-use',
         'too-few-public-methods',
         'too-many-locals',
         'too-many-arguments',
@@ -55,12 +56,7 @@
         'ungrouped-imports',
         # We don't need everything to be documented because of mypy
         'missing-type-doc',
-        'missing-returns-doc',
         'missing-return-type-doc',
-        # Let auto-formatters deal with this
-        'bad-continuation',
-        # Let auto-formatters deal with this
-        'bad-whitespace',
         # Too difficult to please
         'duplicate-code',
         # Let isort handle imports
@@ -128,8 +124,8 @@ ignore = [
 	"docs/**",
 	".git_archival.txt",
 	"pylintrc",
-  "sample",
-  "sample/**",
+        "sample",
+        "sample/**",
 	"spelling_private_dict.txt",
 	"tests",
 	"tests-pylintrc",
