--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,8 +124,8 @@ ignore = [
 	"docs/**",
 	".git_archival.txt",
 	"pylintrc",
-        "sample",
-        "sample/**",
+    "sample",
+    "sample/**",
 	"spelling_private_dict.txt",
 	"tests",
 	"tests-pylintrc",
@@ -164,22 +164,7 @@ ignore_path = [
 
 [tool.mypy]
 
-check_untyped_defs = true
-disallow_incomplete_defs = true
-disallow_subclassing_any = true
-disallow_untyped_calls = true
-disallow_untyped_decorators = true
-disallow_untyped_defs = true
-follow_imports = "normal"
-ignore_missing_imports = true
-no_implicit_optional = true
-strict_equality = true
-strict_optional = true
-warn_no_return = true
-warn_redundant_casts = true
-warn_return_any = true
-warn_unused_configs = true
-warn_unused_ignores = true
+strict = true
 
 [build-system]
 requires = ["setuptools", "pip", "wheel"]
