Add Sphinx Extension classifier

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ license = Apache License, Version 2.0
 classifiers =
     Operating System :: POSIX
     Environment :: Web Environment
+    Framework :: Sphinx :: Extension
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
