Switch from flake8/isort to ruff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,17 +50,19 @@
         'locally-disabled',
         # Let flake8 handle long lines
         'line-too-long',
-        # Let flake8 handle unused imports
+        # Let ruff handle unused imports
         'unused-import',
-        # Let isort deal with sorting
+        # Let ruff deal with sorting
         'ungrouped-imports',
         # We don't need everything to be documented because of mypy
         'missing-type-doc',
         'missing-return-type-doc',
         # Too difficult to please
         'duplicate-code',
-        # Let isort handle imports
+        # Let ruff handle imports
         'wrong-import-order',
+        # Let ruff find protected member access.
+        'protected-access',
     ]
 
     [tool.pylint.'FORMAT']
@@ -86,12 +88,6 @@
 
 line-length = 79
 
-[tool.isort]
-
-multi_line_output = 3
-include_trailing_comma = true
-ensure_newline_before_comments = true
-
 [tool.coverage.run]
 
 branch = true
@@ -104,49 +100,26 @@ log_cli = true
 [tool.check-manifest]
 
 ignore = [
-	"*.enc",
-	".appveyor.yml",
-	".coveragerc",
-	".markdownlint.json",
-	".remarkrc",
-	".readthedocs.yml",
-	"readthedocs.yaml",
-	"CHANGELOG.rst",
-	"CODE_OF_CONDUCT.rst",
-	"CONTRIBUTING.rst",
-	"LICENSE",
-	"Makefile",
-	"ci",
-	"ci/**",
-	"codecov.yaml",
-	"docs",
-	"docs/**",
-	".git_archival.txt",
-	"pylintrc",
+    "*.enc",
+    "readthedocs.yaml",
+    "CHANGELOG.rst",
+    "CODE_OF_CONDUCT.rst",
+    "CONTRIBUTING.rst",
+    "LICENSE",
+    "Makefile",
+    "ci",
+    "ci/**",
+    "codecov.yaml",
+    "docs",
+    "docs/**",
+    ".git_archival.txt",
     "sample",
     "sample/**",
-	"spelling_private_dict.txt",
-	"tests",
-	"tests-pylintrc",
-	"tests/**",
-	"lint.mk",
-]
-
-[tool.pydocstyle]
-# We do not have summary lines, care about "mood", or need sections with
-# dash underlined titles.
-ignore = [
-  'D200',
-  'D205',
-  'D400',
-  'D415',
-  'D202',
-  'D203',
-  'D212',
-  'D401',
-  'D406',
-  'D407',
-  'D413',
+    "spelling_private_dict.txt",
+    "tests",
+    "tests-pylintrc",
+    "tests/**",
+    "lint.mk",
 ]
 
 [tool.doc8]
@@ -168,3 +141,41 @@ strict = true
 [build-system]
 requires = ["setuptools", "pip", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.ruff]
+select = ["ALL"]
+
+ignore = [
+    # We do not annotate the type of 'self'.
+    "ANN101",
+    # We are happy to manage our own "complexity".
+    "C901",
+    # Allow our chosen docstring line-style - no one-line summary.
+    "D200",
+    "D203",
+    "D205",
+    "D212",
+    "D213",
+    # Allow backslashes in a docstring.
+    # See https://click.palletsprojects.com/en/8.0.x/documentation/#preventing-rewrapping.
+    "D301",
+    # It is too much work to make every docstring imperative.
+    "D401",
+    # We ignore some docstyle errors which do not apply to Google style
+    # docstrings.
+    "D406",
+    "D407",
+    # We have an existing interface to support and so we do not want to change
+    # exception names.
+    "N818",
+    # Ignore "too-many-*" errors as they seem to get in the way more than
+    # helping.
+    "PLR0912",
+    "PLR0913",
+    # Allow 'assert' as we use it for tests.
+    "S101",
+    # Allow imports which are only used for type checking to be outside type
+    # checking blocks.
+    "TCH002",
+    "TCH003",
+]
