--- a/pyproject.toml
+++ b/pyproject.toml
@@ -139,7 +139,13 @@ ignore_path = [
 strict = true
 
 [build-system]
-requires = ["setuptools", "pip", "wheel"]
+requires = [
+     "pip",
+     "setuptools",
+     "setuptools-scm-git-archive==1.4",
+     "setuptools_scm[toml]==7.1.0",
+     "wheel",
+ ]
 build-backend = "setuptools.build_meta"
 
 [tool.ruff]
@@ -200,6 +206,31 @@ license = { file = "LICENSE" }
 name = "sphinx-substitution-extensions"
 readme = { file = "README.rst", content-type = "text/x-rst"}
 requires-python = ">=3.9"
+dependencies = [
+    # The lowest versions of these are matched in the ``.github/workflows/ci-versions.yml`` workflow.
+    "docutils>=0.19",
+    "sphinx>=5.1.1",
+]
+
+[project.optional-dependencies]
+dev = [
+    "black==23.1.0",
+    "check-manifest==0.49",
+    "doc8==1.1.1",
+    "mypy==1.1.1",
+    "pdm==2.4.8",
+    "pip_check_reqs==2.4.4",
+    "pyenchant==3.2.2",
+    "pylint==2.17.0",
+    "pyroma==4.2",
+    "pytest-cov==4.0.0",
+    "pytest==7.2.2",
+    "ruff==0.0.254",
+    "types-docutils==0.19.1.6",
+    "types-setuptools==67.6.0.0",
+    "vulture==2.7",
+]
+prompt = ["sphinx-prompt>=0.1"]
 
 [project.urls]
 Source = "https://github.com/adamtheturtle/sphinx-substitution-extensions"
