Enable ruff TCH checks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,6 +92,9 @@ line-length = 79
 
 branch = true
 
+[tool.coverage.report]
+exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
+
 [tool.pytest.ini_options]
 
 xfail_strict = true
@@ -180,10 +183,6 @@ ignore = [
     "PLR0913",
     # Allow 'assert' as we use it for tests.
     "S101",
-    # Allow imports which are only used for type checking to be outside type
-    # checking blocks.
-    "TCH002",
-    "TCH003",
 ]
 
 [tool.distutils.bdist_wheel]
