--- a/pyproject.toml
+++ b/pyproject.toml
@@ -215,6 +215,7 @@ dev = [
     "pip_check_reqs==2.4.4",
     "pyenchant==3.2.2",
     "pylint==2.17.0",
+    "pyright==1.1.300",
     "pyroma==4.2",
     "pytest-cov==4.0.0",
     "pytest==7.2.2",
@@ -237,3 +238,5 @@ where = ["src"]
 sphinx_substitution_extensions = ["py.typed"]
 
 [tool.setuptools_scm]
+
+[tool.pyright]
