--- a/pyproject.toml
+++ b/pyproject.toml
@@ -145,8 +145,7 @@ strict = true
 requires = [
      "pip",
      "setuptools",
-     "setuptools-scm-git-archive==1.4",
-     "setuptools_scm[toml]==7.1.0",
+     "setuptools_scm[toml]>=7.1.0",
      "wheel",
  ]
 build-backend = "setuptools.build_meta"
