Use original version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -251,7 +251,7 @@ sphinx_substitution_extensions = ["py.typed"]
 
  [tool.pyproject-fmt]
 indent = 4
-keep_full_version = false
+keep_full_version = true
 
 [tool.pyright]
 # We would like this to be "strict" but we would need either to ignore errors,
