--- a/pyproject.toml
+++ b/pyproject.toml
@@ -254,6 +254,4 @@ indent = 4
 keep_full_version = true
 
 [tool.pyright]
-# We would like this to be "strict" but we would need either to ignore errors,
-# or for more of docutils to be typed.
-typeCheckingMode = "basic"
+typeCheckingMode = "strict"
