Upgrade to ruff 0.2.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -170,12 +170,16 @@ requires = [
 ]
 
 [tool.ruff]
-select = ["ALL"]
 line-length = 79
+
+[tool.ruff.lint]
+select = ["ALL"]
 
 ignore = [
     # We do not annotate the type of 'self'.
     "ANN101",
+    # Ruff warns that this conflicts with the formatter.
+    "COM812",
     # Allow our chosen docstring line-style - no one-line summary.
     "D200",
     "D203",
@@ -192,6 +196,8 @@ ignore = [
     "D406",
     "D407",
     "D413",
+    # Ruff warns that this conflicts with the formatter.
+    "ISC001",
     # Ignore "too-many-*" errors as they seem to get in the way more than
     # helping.
     "PLR0913",
@@ -254,7 +260,7 @@ dev = [
     "pyroma==4.2",
     "pytest==8.0.0",
     "pytest-cov==4.1",
-    "ruff==0.1.15",
+    "ruff==0.2.0",
     "types-docutils==0.20.0.20240201",
     "vulture==2.11",
 ]
