--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,7 +112,7 @@
 branch = true
 
 [tool.coverage.report]
-exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
+exclude_also = ["if TYPE_CHECKING:"]
 
 [tool.pytest.ini_options]
 
