--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,35 +28,32 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('pyproject.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
+      # We do not use the cache action as uv is faster than the cache action.
       - name: "Install dependencies"
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          # We use '--ignore-installed' to avoid GitHub's cache which can cause
-          # issues - we have seen packages from this cache be cause trouble with
-          # pip-extra-reqs.
-          python -m pip install --ignore-installed --upgrade --editable .[dev]
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          uv venv /home/runner/.venv
+          source /home/runner/.venv/bin/activate
+          uv pip install --upgrade --editable .[dev]
 
       - name: "Lint"
         run: |
+          source /home/runner/.venv/bin/activate
           make lint
 
       - name: "Build sample"
         run: |
+          source /home/runner/.venv/bin/activate
           make build-sample
 
       - name: "Build sample parallel"
         run: |
+          source /home/runner/.venv/bin/activate
           make build-sample-parallel
 
       - name: "Run tests"
         run: |
+          source /home/runner/.venv/bin/activate
           pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests tests/ --cov-report=xml
 
       - name: "Upload coverage to Codecov"
