Do not use --resolution=lowest as it does not work

--- a/.github/workflows/ci-versions.yml
+++ b/.github/workflows/ci-versions.yml
@@ -38,7 +38,13 @@ jobs:
           curl -LsSf https://astral.sh/uv/install.sh | sh
           uv venv /home/runner/.venv
           source /home/runner/.venv/bin/activate
-          uv pip install --resolution=lowest --editable .[dev]
+          uv pip install --ignore-installed --upgrade --editable ".[dev]"
+          # Oldest versions from requirements.
+          # Ideally we would use --resolution=lowest but it does not work -
+          # https://github.com/astral-sh/uv/issues/1563
+          pip install Sphinx==7.2.0
+          pip install sphinx-prompt==1.8.0
+          pip install docutils==0.19
 
       - name: "Build sample"
         run: |
