--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,9 +35,7 @@ jobs:
           curl -LsSf https://astral.sh/uv/install.sh | sh
           uv venv /home/runner/.venv
           source /home/runner/.venv/bin/activate
-          uv pip install --upgrade --editable .[dev]
-          uv pip compile --resolution=${{ matrix.uv-resolution }} --no-deps pyproject.toml > resolved-requirements.txt
-          uv pip install -r resolved-requirements.txt
+          uv pip install --resolution=${{ matrix.uv-resolution }} --editable .[dev]
 
       - name: "Lint"
         run: |
