--- a/pyproject.toml
+++ b/pyproject.toml
@@ -249,9 +249,9 @@ dependencies = [
 dev = [
     "actionlint-py==1.6.26.11",
     "check-manifest==0.49",
+    "deptry==0.12.0",
     "doc8==1.1.1",
     "mypy==1.8.0",
-    "pip_check_reqs==2.5.3",
     "pyenchant==3.2.2",
     "pylint==3.0.3",
     "pyproject-fmt==1.7.0",
