--- a/pyproject.toml
+++ b/pyproject.toml
@@ -244,6 +244,7 @@ dependencies = [
     "docutils>=0.19",
     "sphinx>=7.2",
     "sphinx-prompt>=1.8",
+    "myst-parser",
 ]
 [project.optional-dependencies]
 dev = [
