--- a/pyproject.toml
+++ b/pyproject.toml
@@ -242,7 +242,6 @@ dynamic = [
 ]
 dependencies = [
     "docutils>=0.19",
-    "myst-parser",
     "sphinx>=7.2",
     "sphinx-prompt>=1.8",
 ]
@@ -253,6 +252,7 @@ dev = [
     "deptry==0.12.0",
     "doc8==1.1.1",
     "mypy==1.8.0",
+    "myst-parser==2.0.0",
     "pyenchant==3.2.2",
     "pylint==3.0.3",
     "pyproject-fmt==1.7.0",
