--- a/pyproject.toml
+++ b/pyproject.toml
@@ -250,6 +250,7 @@ dependencies = [
 dev = [
     "actionlint-py==1.6.27.12",
     "check-manifest==0.49",
+    "check-wheel-contents==0.6.0",
     "deptry==0.15.0",
     "doc8==1.1.1",
     "mypy==1.9.0",
