--- a/pyproject.toml
+++ b/pyproject.toml
@@ -263,6 +263,7 @@ dev = [
     "pytest==8.1.1",
     "pytest-cov==5.0.0",
     "ruff==0.3.5",
+    "sphinx[test]==7.3.5", # We use `sphinx.testing`.
     "types-docutils==0.20.0.20240406",
     "vulture==2.11",
 ]
