Enforce Google style docstrings with ruff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -184,20 +184,9 @@ ignore = [
     "COM812",
     # Allow our chosen docstring line-style - no one-line summary.
     "D200",
-    "D203",
     "D205",
     "D212",
-    "D213",
-    # Allow backslashes in a docstring.
-    # See https://click.palletsprojects.com/en/8.0.x/documentation/#preventing-rewrapping.
-    "D301",
-    # It is too much work to make every docstring imperative.
-    "D401",
-    # We ignore some docstyle errors which do not apply to Google style
-    # docstrings.
-    "D406",
-    "D407",
-    "D413",
+    "D415",
     # Ruff warns that this conflicts with the formatter.
     "ISC001",
     # Ignore "too-many-*" errors as they seem to get in the way more than
@@ -211,6 +200,9 @@ ignore = [
 # We comment out code during development, and with VSCode auto-save, this code
 # is sometimes annoyingly removed.
 unfixable = ["ERA001"]
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
 
 [tool.distutils.bdist_wheel]
 universal = true
