Add interrogate tool

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -285,6 +285,11 @@ enableTypeIgnoreComments = false
 reportUnnecessaryTypeIgnoreComment = true
 typeCheckingMode = "strict"
 
+[tool.interrogate]
+fail-under = 100
+omit-covered-files = true
+verbose = 2
+
 [tool.doc8]
 
 max_line_length = 2000
